Moved some packages from devDependencies to dependencies

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "aws-sdk": "~1.0.0",
-    "moment": "~2.0.0",
+    "grunt": "~0.4.1"
+  },
+  "dependencies": {
+    "aws-sdk": "~2.0.0-rc1",
+    "moment": "~2.4.0",
     "underscore": "~1.4.4"
   }
 }
